# shannon-portrait

./: .env.example  .gitignore-2  CLAUDE.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
data/output/image/: shannon-1_image_huffman.json  shannon-3_image_huffman.json  shannon-4_image_huffman.json
docs/: CLAUDE.md  DIAGRAMS.md  FINAL_DELIVERY.md  VERIFICATION_GUIDE.md
infocodec/: __init__.py  cli.py
infocodec/core/: base.py  metrics.py
infocodec/core/compressors/: __init__.py
infocodec/core/compressors/image/: __init__.py  dct.py  differential.py  huffman.py  naive.py  rle.py  sparse.py
infocodec/core/reconstructors/: __init__.py
infocodec/core/reconstructors/image/: dct.py  differential.py  direct.py  huffman.py  rle.py  sparse.py
infocodec/ui/: InfoCoDec.py  app.py
infocodec/ui/pages/: 1_⚙️_Settings.py  2_📤_Encode.py  2_🗜️_Encode.py  3_📥_Decode.py  3_🖼️_Decode.py  4_📊_Diff.py  5_📝_Summarize.py  6_🎓_Explain.py
infocodec/utils/: image_utils.py  openrouter.py  paths.py
tests/: __init__.py  test_compressors.py  test_metrics.py  test_reconstructors.py
