[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon-portrait"
version = "0.1.0"
description = "Information Coding & Encoding - Research tool for Shannon's Information Theory"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shannon Portrait Project", email = "info@shannon-portrait.org"}
]
keywords = ["information-theory", "compression", "shannon", "encoding", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "Pillow>=9.0.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
audio = [
    "librosa>=0.9.0",
    "soundfile>=0.11.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/shannon-portrait"
Documentation = "https://shannon-portrait.readthedocs.io"
Repository = "https://github.com/yourusername/shannon-portrait"
"Bug Tracker" = "https://github.com/yourusername/shannon-portrait/issues"

[project.scripts]
infocodec = "infocodec.cli:cli"
infocodec-ui = "infocodec.cli:ui"

[tool.setuptools]
packages = ["infocodec"]

[tool.setuptools.package-data]
infocodec = ["ui/pages/*.py", "ui/components/*.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=infocodec --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
